--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cmd": "^3.0.0",
     "nodemailer": "^4.6.8",
     "path": "^0.12.7",
+    "prompt": "^1.0.0",
     "pytalk": "^1.0.5",
     "python-shell": "^1.0.4",
     "request": "^2.88.0",
